...
//

import Foundation

enum Sex {
    case male
    case female
}

struct Name: Codable {
    let name: String
    let gender: String
    let startDate: Date?
...
