...
    }

    func viewJobTree() async {
        let nextViewController = await TreeViewController()

        // Build the tree from no skill job
        let unemployed = Job(name: "Unemployed")
        var theFamilyTree = await TreeNode(value: unemployed.name, description: "", underlying: unemployed, children: unemployed.buildTreeNode(game: theGame))
        await nextViewController.setTree(theFamilyTree)
        await nextViewController.setTreeType(type: "Job")
        await nextViewController.setModalPresentationStyle(style: .fullScreen)
        await nextViewController.presenter.theGame = theGame
        await nextViewController.setDelegate(self)
...
